WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218558
WKContentView might get KVO notifications it doesn't expect
https://bugs.webkit.org/show_bug.cgi?id=218558
Summary
WKContentView might get KVO notifications it doesn't expect
Dean Jackson
Reported
2020-11-04 03:46:12 PST
WKContextView might get KVO notifications it doesn't expect
Attachments
Patch
(3.00 KB, patch)
2020-11-04 03:55 PST
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-11-04 03:47:00 PST
<
rdar://problem/71031491
>
Dean Jackson
Comment 2
2020-11-04 03:55:44 PST
Created
attachment 413154
[details]
Patch
Tim Horton
Comment 3
2020-11-04 04:01:55 PST
Comment on
attachment 413154
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413154&action=review
> Source/WebKit/ChangeLog:3 > + WKContextView might get KVO notifications it doesn't expect
I think the title means WKContentView
> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:739 > - [self.layer addObserver:self forKeyPath:@"transform" options:NSKeyValueObservingOptionInitial context:nil]; > + [self.layer addObserver:self forKeyPath:@"transform" options:NSKeyValueObservingOptionInitial context:WKContentViewKVOTransformContext];
Should we use the context in the deregistration too? I feel like there is some documented benefit.
Dean Jackson
Comment 4
2020-11-04 09:42:39 PST
Comment on
attachment 413154
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413154&action=review
>> Source/WebKit/ChangeLog:3 >> + WKContextView might get KVO notifications it doesn't expect > > I think the title means WKContentView
Yep! Thanks.
>> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:739 >> + [self.layer addObserver:self forKeyPath:@"transform" options:NSKeyValueObservingOptionInitial context:WKContentViewKVOTransformContext]; > > Should we use the context in the deregistration too? I feel like there is some documented benefit.
OK!
Dean Jackson
Comment 5
2020-11-04 10:44:56 PST
Committed
r269372
: <
https://trac.webkit.org/changeset/269372
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug